--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Passion+One|Source+Sans+Pro" rel="stylesheet">
-    <title>React App</title>
+    <title>B-Krypto</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
