Done keygenpage, rsa

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Passion+One|Source+Sans+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Passion+One|Source+Sans+Pro|Inconsolata" rel="stylesheet">
     <title>B-Krypto</title>
   </head>
   <body>
